--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Portal de gastronomía tailandesa",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "moment-timezone": "^0.5.33"
+  },
   "devDependencies": {
     "autoprefixer": "^9.8.6",
     "npm-run-all": "^4.1.5",
