--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-imagemin": "^4.0.2",
+    "purgecss": "^4.0.3",
     "rimraf": "^3.0.2"
   },
   "scripts": {
@@ -18,9 +19,19 @@
     "build": "npm-run-all clean parcel:build",
     "parcel:dev": "parcel index.html",
     "parcel:build": "parcel build index.html",
-    "clean": "rimraf dist .cache .cache-loader"
+    "clean": "rimraf dist .cache .cache-loader",
+    "cleancss": "purgecss --css ./styles/style.css --content *.html --output ./style/"
+
   },
   "keywords": [],
   "author": "anais",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/anaisuoc/DOM-SUM.git"
+  },
+  "bugs": {
+    "url": "https://github.com/anaisuoc/DOM-SUM/issues"
+  },
+  "homepage": "https://github.com/anaisuoc/DOM-SUM#readme"
 }
