--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-imagemin": "^4.0.2",
-    "purgecss": "^4.0.3",
     "rimraf": "^3.0.2"
   },
   "scripts": {
@@ -19,9 +18,7 @@
     "build": "npm-run-all clean parcel:build",
     "parcel:dev": "parcel index.html",
     "parcel:build": "parcel build index.html",
-    "clean": "rimraf dist .cache .cache-loader",
-    "cleancss": "purgecss --css ./styles/style.css --content *.html --output ./styles/"
-
+    "clean": "rimraf dist .cache .cache-loader"
   },
   "keywords": [],
   "author": "anais",
